Bug 274095 - SerializedScriptValue.cpp:367:16: error: use of overloaded operator '[]' is ambiguous (with operand types 'ASCIILiteral' and 'int')
Summary: SerializedScriptValue.cpp:367:16: error: use of overloaded operator '[]' is a...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKitGTK (show other bugs)
Version: WebKit Nightly Build
Hardware: PC Linux
: P2 Normal
Assignee: Michael Catanzaro
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-05-13 09:37 PDT by Michael Catanzaro
Modified: 2024-05-13 11:38 PDT (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Catanzaro 2024-05-13 09:37:37 PDT
WebKitGTK 2.45.1 fails to build on i686:

        In file included from /buildstream/gnome/sdk/webkitgtk-6.0.bst/_builddir/WebCore/DerivedSources/unified-sources/UnifiedSource-68aea4ac-20.cpp:6:
        /buildstream/gnome/sdk/webkitgtk-6.0.bst/Source/WebCore/bindings/js/SerializedScriptValue.cpp:367:16: error: use of overloaded operator '[]' is ambiguous (with operand types 'ASCIILiteral' and 'int')
          367 |     if (tagName[0] != '<')
              |         ~~~~~~~^~
        /buildstream/gnome/sdk/webkitgtk-6.0.bst/_builddir/WTF/Headers/wtf/text/ASCIILiteral.h:70:20: note: candidate function
           70 |     constexpr char operator[](unsigned index) const { return m_charactersWithNullTerminator[index]; }
              |                    ^
        /buildstream/gnome/sdk/webkitgtk-6.0.bst/Source/WebCore/bindings/js/SerializedScriptValue.cpp:367:16: note: built-in candidate operator[](const char *, int)
          367 |     if (tagName[0] != '<')
              |                ^
        /buildstream/gnome/sdk/webkitgtk-6.0.bst/Source/WebCore/bindings/js/SerializedScriptValue.cpp:367:16: note: built-in candidate operator[](const volatile char *, int)
        1 error generated.
Comment 1 Michael Catanzaro 2024-05-13 09:40:36 PDT
Pull request: https://github.com/WebKit/WebKit/pull/28479
Comment 2 EWS 2024-05-13 11:38:45 PDT
Committed 278699@main (cef7bfbcfe60): <https://commits.webkit.org/278699@main>

Reviewed commits have been landed. Closing PR #28479 and removing active labels.