SerializedScriptValue.cpp:367:16: error: use of overloaded operator '[]' is ambiguous (with operand types 'ASCIILiteral' and 'int') https://bugs.webkit.org/show_bug.cgi?id=274095

Unreviewed build fix. Specify the type of the integer literal to avoid
ambiguity.

* Source/WebCore/bindings/js/SerializedScriptValue.cpp:
(WTF::printInternal):

Canonical link: https://commits.webkit.org/278699@main